updated battle button so when you click on it a picture of a battle animal comes up

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
        <img id="pet_picture" src="http://www.fillmurray.com/200/300.jpg"alt="some random picture">
  
       </div>
+    <div id ="pet_picture_container">
+      <img id="picture_actions" src = "images/battle.jpg">
+    </div>
      
     <div id ="stats_container">
     </div>
