added pictures of maci

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <body>
  
     <div id ="pet_animation_container" >
-       <img id="pet_picture" src="http://www.fillmurray.com/200/300.jpg"alt="some random picture">
+       <img id="pet_picture" src="images/level_0.jpg"alt="picture of your pet">
  
       </div>
     <div id ="pet_picture_container">
-      <img id="picture_actions" src = "images/battle.jpg">
+      <img id="picture_actions" src = "images/battle.jpg" alt="picture of the activity you are currently doing">
     </div>
      
     <div id ="stats_container">
